--- a/main/kweathercore/PKGBUILD
+++ b/main/kweathercore/PKGBUILD
@@ -1,23 +1,46 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: Gustavo Castro < gustawho [ at ] gmail [ dot ] com >
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=kweathercore
-pkgver=0.5
-pkgrel=1
 pkgdesc="Library to facilitate retrieval of weather information including forecasts and alerts"
-arch=(x86_64 i686 arm armv6h armv7h aarch64)
-url="https://invent.kde.org/libraries/kweathercore"
-license=(GPL3)
-depends=('ki18n' 'qt5-location')
-makedepends=('git' 'extra-cmake-modules' 'qt5-tools')
-source=("https://download.kde.org/stable/$pkgname/$pkgver/$pkgname-$pkgver.tar.xz")
-sha256sums=('162c69f758f2e9b1c1ef2b8d0c54f3cee439b4171ef32632df410411d30d4d6f')
+pkgver=0.7.r0.gabf5f29
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    armv7h
+    aarch64
+)
+license=(GPL-3.0-or-later)
+depends=(
+    ki18n
+    qt5-location
+    kholidays
+)
+makedepends=(
+    git
+    extra-cmake-modules
+    qt5-tools
+)
+_commit=abf5f293ef0b231447b83cb16571265649ad986e
+source=(
+    "git+https://invent.kde.org/libraries/kweathercore.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 build() {
-  cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -B build -S $pkgname-$pkgver
-  cmake --build build --config Release
+    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -B build -S $pkgname
+    cmake --build build --config Release
 }
 
 package() {
-  DESTDIR="${pkgdir}" cmake --install build --config Release
+    DESTDIR="${pkgdir}" cmake --install build --config Release
 }
