--- a/main/alligator/PKGBUILD
+++ b/main/alligator/PKGBUILD
@@ -1,35 +1,59 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: Dan Johansen <strit@manjaro.org>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=alligator
-pkgver=22.06
-pkgrel=1
 pkgdesc="RSS Feed Reader"
-arch=('x86_64' 'aarch64')
-url="https://www.plasma-mobile.org/"
-license=('GPL-3.0-or-later')
-depends=(kcoreaddons ki18n kconfig syndication kirigami2)
-makedepends=('cmake' 'extra-cmake-modules')
-source=("http://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-md5sums=('d1f2a083a1c8a0ae7e8cd576ae126cec')
+pkgver=23.01.0.r0.gc2087cd
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(GPL-3.0-or-later)
+depends=(
+    kcoreaddons
+    ki18n
+    kconfig
+    syndication
+    kirigami-addons
+)
+makedepends=(
+    cmake
+    extra-cmake-modules
+)
+_commit=c2087cd576a9a24182e82c8d9b988ee0ea108d16
+source=(
+    "git+https://invent.kde.org/plasma-mobile/alligator.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
-  mkdir -p build
+    mkdir -p build
 }
 
 build() {
-  cd build
-  cmake ../$pkgname-$pkgver \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_TESTING=OFF \
-    -DKDE_INSTALL_LIBDIR=lib \
-    -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
-    -DCMAKE_BUILD_TYPE=Release
-  make
+    cd build
+    cmake ../$pkgname \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_TESTING=OFF \
+        -DKDE_INSTALL_LIBDIR=lib \
+        -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
+        -DCMAKE_BUILD_TYPE=Release
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir/" install
+    cd build
+    make DESTDIR="$pkgdir/" install
 }
 
