--- a/main/calindori/PKGBUILD
+++ b/main/calindori/PKGBUILD
@@ -1,35 +1,59 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: dodgejcr@gmail.com
 # Contributor: Bhushan Shah <bhush94 at gmail dot com>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=calindori
-pkgver=22.06
-pkgrel=1
 pkgdesc="Calendar application for Mobile Devices running Plasma"
-arch=('x86_64' 'aarch64')
-url="https://community.kde.org/Plasma/Mobile"
-license=('GPL3')
-depends=('plasma-framework' 'kcalendarcore' 'kpeople')
-makedepends=('cmake' 'extra-cmake-modules' 'kdelibs4support' 'kdoctools')
-source=("https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-md5sums=('d48e0d6f96ed0fe9f2a97800f2a00325')
+pkgver=23.01.0.r0.gea5e59e
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(GPL-3.0-or-later)
+depends=(
+    plasma-framework
+    kcalendarcore
+    kpeople
+)
+makedepends=(
+    cmake
+    extra-cmake-modules
+    kdelibs4support
+    kdoctools
+)
+_commit=ea5e59e882f1281499871a710c7352eac3bb3fe1
+source=(
+    "git+https://invent.kde.org/plasma-mobile/calindori.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
-  mkdir -p build
+    mkdir -p build
 }
 
 build() {
-  cd build
-  cmake ../$pkgname-$pkgver \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_TESTING=OFF \
-    -DKDE_INSTALL_LIBDIR=lib \
-    -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
-    -DCMAKE_BUILD_TYPE=Release
-  make
+    cd build
+    cmake ../$pkgname \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_TESTING=OFF \
+        -DKDE_INSTALL_LIBDIR=lib \
+        -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
+        -DCMAKE_BUILD_TYPE=Release
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir/" install
+    cd build
+    make DESTDIR="$pkgdir/" install
 }
