--- a/main/kclock/PKGBUILD
+++ b/main/kclock/PKGBUILD
@@ -2,18 +2,45 @@
 # Contributor: Bernhard Landauer <bernhard@manjaro.org>
 # Contributor: Furkan K. <furkan@fkardame.com>
 # Contributor: Bhushan Shah <bhush94 at gmail dot com>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=kclock
-pkgver=22.06
-pkgrel=1
 pkgdesc="Simple Clock application for Mobile Devices running Plasma"
-arch=('x86_64' 'aarch64')
-url="https://invent.kde.org/plasma-mobile/kclock"
-license=('GPL-2.0-or-later')
-depends=('kdbusaddons' 'kirigami-addons' 'knotifications' 'plasma-framework' 'qt5-quickcontrols2' 'qt5-declarative' 'qt5-multimedia')
-makedepends=('cmake' 'extra-cmake-modules' 'qt5-svg')
-source=("https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-md5sums=('53ed9e6f39fed17b4e1f795f30a9bff4')
+pkgver=23.01.0.r0.gc59af0c
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(GPL-2.0-or-later)
+depends=(
+    kdbusaddons
+    kirigami-addons
+    knotifications
+    plasma-framework
+    qt5-quickcontrols2
+    qt5-declarative
+    qt5-multimedia
+)
+makedepends=(
+    cmake
+    extra-cmake-modules
+    qt5-svg
+)
+_commit=c59af0ccd327908e6c69fa52894960838393c6aa
+source=(
+    "git+https://invent.kde.org/plasma-mobile/kclock.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
   mkdir -p build
@@ -21,8 +48,8 @@ prepare() {
 
 build() {
   cd build
-  cmake ../$pkgname-$pkgver \
-    -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+  cmake ../$pkgname \
+    -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBDIR=lib
   make
