--- a/main/koko/PKGBUILD
+++ b/main/koko/PKGBUILD
@@ -1,30 +1,56 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: Gustavo Castro < gustawho [ at ] gmail [ dot ] com >
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=koko
-pkgver=22.06
-pkgrel=1
-arch=(x86_64 i686 armv7h aarch64)
 pkgdesc="Image gallery application designed for desktop and touch devices"
-url="https://invent.kde.org/graphics/koko"
-license=('LGPL2.1')
-depends=('kirigami2' 'kcoreaddons' 'kguiaddons' 'kconfig' 'kquickimageeditor' 'knotifications' 'exiv2'
-         'qt5-location' 'kdeclarative' 'kfilemetadata' 'ki18n' 'kio' 'kdbusaddons')
-makedepends=('extra-cmake-modules' 'qt5-svg' 'qt5-tools')
-checkdepends=('xorg-server-xvfb')
-source=("https://download.kde.org/stable/plasma-mobile/${pkgver}/${pkgname}-${pkgver}.tar.xz")
-md5sums=('10c5c263ac723bc0b37c18c0a706ba3f')
+pkgver=23.01.0.r0.ge3a4310
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(LGPL-2.1-or-later)
+depends=(
+    kirigami2
+    kcoreaddons
+    kguiaddons
+    kconfig
+    kquickimageeditor
+    knotifications
+    exiv2
+    qt5-location
+    kdeclarative
+    kfilemetadata
+    ki18n
+    kio
+    kdbusaddons
+)
+makedepends=(
+    extra-cmake-modules
+    qt5-svg
+    qt5-tools
+)
+_commit=e3a4310e596fe6b0aad15caa89c218c44bba10b8
+source=(
+    "git+https://invent.kde.org/graphics/koko.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
 
-build() {
-  cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -B build -S "${pkgname}-${pkgver}"
-  cmake --build build --config Release
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-#check() {
-#  cd build
-#  xvfb-run ctest --output-on-failure
-#}
+build() {
+    cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -B build -S "${pkgname}"
+    cmake --build build --config Release
+}
 
 package() {
-  DESTDIR="${pkgdir}" cmake --install build --config Release
+    DESTDIR="${pkgdir}" cmake --install build --config Release
 }
