--- a/main/kpeoplesink/PKGBUILD
+++ b/main/kpeoplesink/PKGBUILD
@@ -3,39 +3,52 @@
 # Contributor: Bhushan Shah <bhush94 at gmail dot com>
 _mode=host
 pkgname=kpeoplesink
-pkgver=r77.g5d5e1b9
-pkgrel=1
 pkgdesc="Expose Sink contacts to KPeople"
-arch=('aarch64' 'x86_64')
-url="https://invent.kde.org/pim/$pkgname"
-license=('LGPL')
-depends=('kaccounts-integration' 'kcontacts' 'kpeople' 'sink')
-makedepends=('git' 'cmake' 'extra-cmake-modules')
-replaces=("$pkgname-git")
-source=("git+$url.git")
-md5sums=('SKIP')
+pkgver=r81.g4f129cb
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(LGPL)
+depends=(
+    kaccounts-integration
+    kcontacts
+    kpeople
+    sink
+)
+makedepends=(
+    git
+    cmake
+    extra-cmake-modules
+)
 
-pkgver() {
-  cd $pkgname
-  printf "r%s.g%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short HEAD)"
-}
+_commit=4f129cb113597c75ac9a194a0362983eaf1f7915
+source=(
+    "git+https://invent.kde.org/pim/kpeoplesink.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
 
 prepare() {
-  mkdir -p build
+    mkdir -p build
 }
 
 build() {
-  cd build
-  cmake ../$pkgname \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_TESTING=OFF \
-    -DLIB_INSTALL_DIR=lib \
-    -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
-    -DCMAKE_BUILD_TYPE=Release
-  make
+    cd build
+    cmake ../$pkgname \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_TESTING=OFF \
+        -DLIB_INSTALL_DIR=lib \
+        -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
+        -DCMAKE_BUILD_TYPE=Release
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir/" install
+    cd build
+    make DESTDIR="$pkgdir/" install
 }
