--- a/main/krecorder/PKGBUILD
+++ b/main/krecorder/PKGBUILD
@@ -1,31 +1,58 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: Bernhard Landauer <bernhard@manjaro.org>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=krecorder
-pkgver=22.06
+pkgdesc="Audio recording app for Plasma."
+pkgver=23.01.0.r0.g0e5bec8
 pkgrel=1
-pkgdesc="Cross-platfrom calculator built with the Kirigami framework"
-arch=('x86_64' 'aarch64')
-url="https://invent.kde.org/plasma-mobile/kalk"
-license=('GPL3')
-depends=('ki18n' 'kconfig' 'kirigami2' 'qt5-multimedia' 'qt5-svg' 'plasma-framework')
-makedepends=('qt5-tools' 'extra-cmake-modules')
-source=("https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-sha256sums=('6f907056f58dcbe4292c2b434420a2fb560eb46d02695801ef3728dfcbc70f91')
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(GPL-3.0-or-later)
+depends=(
+    ki18n
+    kconfig
+    kirigami2
+    qt5-multimedia
+    qt5-svg
+    gst-plugins-good
+    plasma-framework
+    kirigami-addons
+)
+makedepends=(
+    qt5-tools
+    extra-cmake-modules
+)
+_commit=0e5bec80960f74a4ac75803522d55e84cae9b9d9
+source=(
+    "git+https://invent.kde.org/plasma-mobile/krecorder.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
-  mkdir build
+    mkdir build
 }
 
 build() {
-  cd build
-  cmake ../$pkgname-$pkgver \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=/usr
-  make
+    cd build
+    cmake ../$pkgname \
+        -DCMAKE_BUILD_TYPE=Release \
+      -DCMAKE_INSTALL_PREFIX=/usr
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir" install
+    cd build
+    make DESTDIR="$pkgdir" install
 }
