--- a/main/plasma-mobile-nm/PKGBUILD
+++ b/main/plasma-mobile-nm/PKGBUILD
@@ -5,27 +5,54 @@
 _mode=host
 pkgname=plasma-mobile-nm
 _pkgname=plasma-nm
-pkgver=5.25.4
+pkgdesc="Plasma applet written in QML for managing network connections - Mobile Edition"
+pkgver=5.26.5.r0.ge507aa40
 pkgrel=1
-pkgdesc='Plasma applet written in QML for managing network connections - Mobile Edition'
-arch=(x86_64 armv7h aarch64)
-url='https://plasma-mobile.org/'
-license=(GPL2)
-depends=(plasma-workspace modemmanager-qt networkmanager-qt qca-qt5 mobile-broadband-provider-info)
-makedepends=(extra-cmake-modules openconnect)
-optdepends=('openconnect: Cisco AnyConnect VPN plugin')
-provides=("${_pkgname}")
-conflicts=("${_pkgname}")
-source=("https://download.kde.org/stable/plasma/$pkgver/$_pkgname-$pkgver.tar.xz")
-sha256sums=('62621220cdd030098fa4c90a613cd279f8be29d21ff27d45792fcf7ac529f790')
+_arches=all
+arch=(
+    aarch64
+    x86_64
+    armv7h
+)
+license=(GPL-2.0-or-later)
+provides=(
+    "${_pkgname}"
+)
+conflicts=(
+    "${_pkgname}"
+)
+depends=(
+    plasma-workspace
+    modemmanager-qt
+    networkmanager-qt
+    qca-qt5
+    mobile-broadband-provider-info
+)
+makedepends=(
+    extra-cmake-modules
+    openconnect
+)
+optdepends=("openconnect: Cisco AnyConnect VPN plugin")
+_commit=e507aa404409909d45c862f9c579f50563466eeb
+source=(
+    "git+https://invent.kde.org/plasma/plasma-nm.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "${_pkgname}"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 build() {
-  cmake -B build -S $_pkgname-$pkgver \
-    -DBUILD_TESTING=OFF \
-    -DBUILD_MOBILE=True
-  cmake --build build
+    cmake -B build -S $_pkgname \
+        -DBUILD_TESTING=OFF \
+        -DBUILD_MOBILE=True
+    cmake --build build
 }
 
 package() {
-  DESTDIR="$pkgdir" cmake --install build
+    DESTDIR="$pkgdir" cmake --install build
 }
