--- a/main/plasma-phonebook/PKGBUILD
+++ b/main/plasma-phonebook/PKGBUILD
@@ -1,35 +1,62 @@
 # Maintainer: Danct12 <danct12@disroot.org>
 # Contributor: dodgejcr@gmail.com
 # Contributor: Bhushan Shah <bhush94 at gmail dot com>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=plasma-phonebook
-pkgver=22.06
-pkgrel=1
 pkgdesc="Phonebook application for Mobile Devices running Plasma"
-arch=('x86_64' 'aarch64')
-url="https://community.kde.org/Plasma/Mobile"
-license=('GPL3')
-depends=('kirigami2' 'kcontacts' 'kpeople' 'kpeoplevcard' 'qt5-quickcontrols2' 'qt5-svg')
-makedepends=('cmake' 'extra-cmake-modules' 'kdoctools')
-source=("https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-md5sums=('627c810f3510ea71b61410de2dbf0343')
+pkgver=23.01.0.r0.g57421fb
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    armv7h
+    aarch64
+)
+license=(GPL-3.0-or-later)
+depends=(
+    kirigami2
+    kcontacts
+    kpeople
+    kpeoplevcard
+    qt5-quickcontrols2
+    qt5-svg
+    kirigami-addons
+)
+makedepends=(
+    cmake
+    extra-cmake-modules
+    kdoctools
+)
+_commit=57421fb6c3dd9b2b4b35f9e7aa840ef9da094ccc
+source=(
+    "git+https://invent.kde.org/plasma-mobile/plasma-phonebook.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
   mkdir -p build
 }
 
 build() {
-  cd build
-  cmake ../plasma-phonebook-$pkgver \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_TESTING=OFF \
-    -DKDE_INSTALL_LIBDIR=lib \
-    -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
-    -DCMAKE_BUILD_TYPE=Release
-  make
+    cd build
+    cmake ../plasma-phonebook \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_TESTING=OFF \
+        -DKDE_INSTALL_LIBDIR=lib \
+        -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
+        -DCMAKE_BUILD_TYPE=Release
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir/" install
+    cd build
+    make DESTDIR="$pkgdir/" install
 }
