--- a/main/qqc2-breeze-style/PKGBUILD
+++ b/main/qqc2-breeze-style/PKGBUILD
@@ -1,39 +1,48 @@
-# Maintainer: Bernhard Landauer <bernhard@manjaro.org>
+# Maintainer: Gustavo Castro < gustawho [ at ] gmail [ dot ] com >
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=qqc2-breeze-style
-pkgver=5.25.4
+pkgdesc="Breeze inspired QQC2 Style"
+pkgver=5.26.4.r0.g5859435
 pkgrel=1
-pkgdesc='Breeze inspired QQC2 Style'
-arch=(x86_64 aarch64)
-url='https://community.kde.org/Frameworks'
-license=(LGPL)
-depends=(kirigami2 kiconthemes)
-makedepends=(extra-cmake-modules git)
-replaces=("$pkgname-git")
-source=("https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz"{,.sig})
-sha256sums=('5f446fe26ba1bad2164f403c748de33a8a2b1cd3e868f32b252436b7b673d46b'
-            'SKIP')
-validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
-              'E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
-              '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
-              'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
-              '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+_arches=all
+arch=(
+    x86_64
+    aarch64
+    armv7h
+)
+license=(GPL-3.0-or-later)
+depends=(
+    qt5-base
+    qt5-declarative
+    qt5-quickcontrols2
+    kiconthemes
+    kirigami2
+)
+makedepends=(
+    git
+    extra-cmake-modules
+    qt5-tools
+)
+_commit=585943559c9f439433a98a1cc84ffc681033fa65
+source=(
+    "git+https://invent.kde.org/plasma/qqc2-breeze-style.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
 
-prepare() {
-  mv $pkgname-$pkgver $pkgname
-  mkdir -p build
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
-  cd build
-  cmake ../$pkgname \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_INSTALL_LIBDIR=lib \
-    -DBUILD_TESTING=OFF
-  make
+  cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -B build -S "${pkgname}"
+  cmake --build build --config Release
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir" install
+  DESTDIR="${pkgdir}" cmake --install build --config Release
 }
+
