--- a/main/spacebar/PKGBUILD
+++ b/main/spacebar/PKGBUILD
@@ -2,47 +2,68 @@
 # Contributor: Bernhard Landauer <bernhard@manjaro.org>
 # Contributor: dodgejcr@gmail.com
 # Contributor: Bhushan Shah <bhush94 at gmail dot com>
+# Contributor: Devin Lin <devin@kde.org>
 _mode=host
 pkgname=spacebar
-pkgver=22.06
-pkgrel=1
 pkgdesc="SMS and messaging application for Mobile Devices running Plasma"
-arch=('x86_64' 'aarch64')
-url="https://community.kde.org/Plasma/Mobile"
-license=('GPL3')
-depends=('kcontacts'
-    'knotifications'
-    'kirigami2'
-    'kpeople'
-    'ki18n'
-    'qt5-quickcontrols2'
-    'modemmanager-qt'
-    'telepathy-qt'
-    'libphonenumber'
-    'kdbusaddons'
-    'kio')
-makedepends=('cmake'
-    'extra-cmake-modules'
-    'qcoro-qt5')
-source=("https://download.kde.org/stable/plasma-mobile/$pkgver/$pkgname-$pkgver.tar.xz")
-md5sums=('367e63ba393cb4e9f49ae60f261fb65b')
+pkgver=23.01.0.r0.gab18e7e
+pkgrel=1
+_arches=all
+arch=(
+    x86_64
+    armv7h
+    aarch64
+)
+license=(GPL-3.0-or-later)
+depends=(
+    kcontacts
+    knotifications
+    kirigami2
+    kirigami-addons
+    kpeople
+    ki18n
+    qt5-quickcontrols2
+    modemmanager-qt
+    telepathy-qt
+    libphonenumber
+    kdbusaddons
+    kio
+    c-ares
+)
+makedepends=(
+    cmake
+    extra-cmake-modules
+    qcoro-qt5
+)
+_commit=ab18e7e36eefe3c9c3be37e5be2b4d1e08b2cbb6
+source=(
+    "git+https://invent.kde.org/plasma-mobile/spacebar.git#commit=$_commit"
+)
+sha256sums=(
+    SKIP
+)
+
+pkgver() {
+    cd "$pkgname"
+    git describe --long "$_commit" | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
-  mkdir -p build
+    mkdir -p build
 }
 
 build() {
-  cd build
-  cmake ../spacebar-$pkgver \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DBUILD_TESTING=OFF \
-    -DKDE_INSTALL_LIBDIR=lib \
-    -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
-    -DCMAKE_BUILD_TYPE=Release
-  make
+    cd build
+    cmake ../spacebar \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_TESTING=OFF \
+        -DKDE_INSTALL_LIBDIR=lib \
+        -DKDE_INSTALL_USE_QT_SYS_PATHS=ON \
+        -DCMAKE_BUILD_TYPE=Release
+    make
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir/" install
+    cd build
+    make DESTDIR="$pkgdir/" install
 }
