--- a/phosh/phosh-mobile-settings/PKGBUILD
+++ b/phosh/phosh-mobile-settings/PKGBUILD
@@ -1,7 +1,7 @@
 _mode=host
 pkgname=phosh-mobile-settings
 pkgdesc="A settings app for mobile specific things"
-pkgver=0.22.0.r0.g810c3ab
+pkgver=0.25.0.r0.g8f95c3f
 pkgrel=1
 _arches=all
 arch=(
@@ -16,12 +16,13 @@ depends=(
     libadwaita
     lm_sensors
     wayland-protocols
+    phosh
 )
 makedepends=(
     meson
     ninja
 )
-_commit=810c3abaac23210c88f9da8a9d3cd00a4768f730
+_commit=8f95c3f4258ba2b4753049b8c9ecabe7b402cf4d
 source=(
     "git+https://gitlab.gnome.org/guidog/phosh-mobile-settings.git#commit=$_commit"
 )
