--- a/main/flavour-gnome-minimal/PKGBUILD
+++ b/main/flavour-gnome-minimal/PKGBUILD
@@ -3,7 +3,7 @@ _nodeps=true
 pkgname=flavour-gnome-minimal
 pkgdesc="Kupfer flavour: The gtk-based GNOME desktop environment (minimal edition)"
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 _arches=all
 arch=(
     x86_64
@@ -17,12 +17,12 @@ depends=(
     gdm
 )
 source=(
-    gnome.txt
+    gnome.lst
 )
 sha256sums=(
     d25ef44eda57603bf9b0f54bdb76cf58d079a392ab2149805dd696dd775b532e
 )
 
 package() {
-    install -Dm644 "$srcdir"/gnome.txt "$pkgdir"/etc/kupfer/systemd/gnome.txt
+    install -Dm644 "$srcdir"/gnome.lst "$pkgdir"/etc/kupfer/systemd/gnome.lst
 }
