--- a/main/kupfer-config/PKGBUILD
+++ b/main/kupfer-config/PKGBUILD
@@ -2,7 +2,7 @@ _mode=cross
 _nodeps=true
 pkgname=kupfer-config
 pkgdesc="Tool to apply specific configurations and state"
-pkgver=0.2
+pkgver=0.3
 pkgrel=1
 _arches=specific
 arch=(any)
@@ -10,14 +10,18 @@ license=(GPL-3.0-or-later)
 depends=(python)
 source=(
     kupfer-config.py
-    example.txt
+    systemd_readme.txt
+    example.lst
 )
 sha256sums=(
-    3ebef7072be7afadcff024dd8bead0ae0e571852d34f743891dfd9287fc0ebac
+    fd44d18cefb446fd7139d52c67c0b3368d70122c7da32621970f675bffbb95ff
+    124a5ebe95d5395c21d2ad97fef9d88ba53e4f477b9b0a02cf8e073f9a541094
     df9789f6cb5af275d73a19110b176285ccec7ec0d8e4156bc0e8569a003d2d21
 )
 
 package() {
     install -Dm755 "$srcdir"/kupfer-config.py "$pkgdir"/usr/bin/kupfer-config
-    install -Dm644 "$srcdir"/example.txt "$pkgdir"/etc/kupfer/systemd/overrides.d/example.txt
+    install -Dm644 "$srcdir"/systemd_readme.txt "$pkgdir"/etc/kupfer/systemd/readme.txt
+    install -Dm644 "$srcdir"/example.lst "$pkgdir"/etc/kupfer/systemd/overrides.d/example.lst
+    install -dm755 "$pkgdir"/etc/kupfer/systemd/user/overrides.d
 }
