--- a/boot/meta-qbootctl/PKGBUILD
+++ b/boot/meta-qbootctl/PKGBUILD
@@ -3,16 +3,16 @@ _nodeps=true
 pkgname=meta-qbootctl
 pkgdesc="Metapackage for Qualcomm A/B boot support"
 pkgver=0.1
-pkgrel=2
+pkgrel=3
 _arches=specific
 arch=(
     aarch64
 )
 license=(GPL)
 depends=(qbootctl)
-source=(qbootctl.txt)
+source=(qbootctl.lst)
 sha256sums=(1b7d85ad35e7af00ddf8ac786acc3db1348f78f62061feb6e30175f696cb5dd3)
 
 package() {
-    install -Dm644 "$srcdir"/qbootctl.txt "$pkgdir"/etc/kupfer/systemd/qbootctl.txt
+    install -Dm644 "$srcdir"/qbootctl.lst "$pkgdir"/etc/kupfer/systemd/qbootctl.lst
 }
