--- a/phosh/flavour-phosh-minimal/PKGBUILD
+++ b/phosh/flavour-phosh-minimal/PKGBUILD
@@ -3,7 +3,7 @@ _nodeps=true
 pkgname=flavour-phosh-minimal
 pkgdesc="Kupfer flavour: The gtk-based Phosh (Phone Shell) environment (minimal edition)"
 pkgver=0.1
-pkgrel=3
+pkgrel=4
 _arches=all
 arch=(
     x86_64
@@ -16,6 +16,7 @@ depends=(
     phosh
     phosh-osk-stub
     meta-gnome-minimal-common
+    gnome-calls
 )
 source=(phosh.lst)
 sha256sums=(a1bead1bd80c5944ee5b9712117736dc3006bcae0b97fc8407ea7f622bcd49ae)
